--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 }
 
 .card1 {
-  background: url('https://i.pinimg.com/originals/28/d2/e6/28d2e684e7859a0dd17fbd0cea00f8a9.jpg');
+  background: url('https://raw.githubusercontent.com/joannanorton/joannablog/refs/heads/main/src/u1.jpg');
   background-size: 250px;
   background-repeat: no-repeat;
   background-position: center center;
@@ -435,7 +435,7 @@
       <!-- CARD 2 -->
       <div class="card card1 w-72 h-80 rounded overflow-hidden bg-black flex justify-center items-center relative">
         <div class="h-72 w-64 hover:border hover:border-white transition-all">
-          <h2 class="text-white ml-4 pt-5 text-xl font-semibold">Ben Stiller</h2>
+          <h2 class="text-white ml-4 pt-5 text-xl font-semibold">Gangan Imam</h2>
           <div class="icons flex flex-col text-white absolute top-44 space-y-2 ml-4">
             <i class="fa fa-codepen"></i>
             <i class="fa fa-instagram"></i>
